<resources>
    <string name="app_name">快标注管理</string>
    <string name="title_state">志愿者管理</string>
    <string name="title_picmanage">图片管理</string>
    <string name="title_me">我</string>
    <string name="enter_label">请输入标签类别</string>
    <string name="get_all_label">输入*可获取所有标注成功的图片和标签</string>
    <string name="get_label">获取标签</string>
    <string name="export_label">导出当前标签文件</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="upload_pictures">上传图片</string>
    <string name="view_user_history_labels">查看志愿者历史标签</string>
    <string name="search_and_export_picture_labels">搜索和导出标签</string>
    <string name="task_completion">志愿者任务完成情况</string>
    <string name="name">姓名：</string>
    <string name="login_name">登录名：</string>
    <string name="change_password">修改密码</string>
    <string name="setup_language">设置语言</string>
    <string name="exit">退出</string>
    <string name="tip_change_pw">修改密码后，会退出登录哦！</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="Fill_in_first">优先填写</string>
    <string name="First_choice">优先选择</string>
    <string name="No_fill_in">禁止填写</string>
    <string name="forbid_choice">禁止选择</string>
    <string name="forbid_choice_fill">禁止填写选择</string>
    <string name="normal">正常</string>
    <string name="choice_accuracy">选择正确率：</string>
    <string name="fill_accuracy">填写正确率：</string>
    <string name="not_new_record">不是新记录</string>
    <string name="delete">删除</string>
</resources>