<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_getkeyword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical">
        <EditText
            android:id="@+id/queryPicByKeyWordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_all_label"
            android:textColor="@color/red"
            android:textSize="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:onClick="get"
            android:id="@+id/getPicByKeyWordBtn"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_shape"
            android:layout_height="wrap_content"
            android:text="@string/get_label"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>
            <Button
                android:onClick="exportTagTotxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape"
                android:text="@string/export_label"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_getPicByKeyWord"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>